--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.11"
   }
