--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "antd": "^5.22.1",
+    "antd": "^5.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "tailwindcss-motion": "^0.4.3-beta"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
